--- a/arches/install/requirements.txt
+++ b/arches/install/requirements.txt
@@ -18,6 +18,7 @@ mapnik==0.1
 flexidate==1.0
 SPARQLWrapper==1.8.0
 django-recaptcha==1.3.1
+couchdb==1.1
 
 # Leave the following line commented so that pip install will ignore this
 # The installer uses the following line to download the proper version of ES
