--- a/arches/install/requirements.txt
+++ b/arches/install/requirements.txt
@@ -19,6 +19,7 @@ flexidate==1.0
 SPARQLWrapper==1.8.0
 django-recaptcha==1.3.1
 couchdb==1.1
+django-revproxy==0.9.13
 
 # Leave the following line commented so that pip install will ignore this
 # The installer uses the following line to download the proper version of ES
