add couchdb module

--- a/arches/install/requirements.txt
+++ b/arches/install/requirements.txt
@@ -15,6 +15,8 @@ SPARQLWrapper==1.8.0
 django-recaptcha==1.4.0
 python-jose==2.0.2
 edtf==2.7.0
+couchdb==1.2
+django-revproxy==0.9.14
 
 # Leave the following line commented so that pip install will ignore this
 # The installer uses the following line to download the proper version of ES
